Installed new package: render-if-visible - to prevent rendering at once

--- a/src/components/CountryCard/CountryCard.css
+++ b/src/components/CountryCard/CountryCard.css
@@ -1,5 +1,6 @@
 .CountryCard {
 	width: 280px;
+	height: 325px;
 	display: block;
 	background-color: var(--elements);
 	border-radius: 5px;
